# cua

./: .env.example  .gitignore  BUILD_PLAN.md  DESIGN.md  LICENSE  PRODUCT.md  README.md  Untitled.ipynb  demo_script.py  finetune.py  pyproject.toml  rl_analysis.ipynb  rl_analysis_generated.ipynb  test_minimax.py
.impeccable/: design.json
.ipynb_checkpoints/: rl_analysis-checkpoint.ipynb
aegis_core/: __init__.py
cua_loop/: __init__.py  action_verifier.py  approval.py  audit_log.py  cascade.py  client.py  critic.py  cross_branch.py  demo.py  demo_listings.py  dom_extractor.py  ecommerce.py  element_annotator.py  fallback_scripts.py  marketplace.py  models.py  orchestrator.py  pagination.py  query_parser.py  rl.py  rl_schema.py  runner.py  scaling.py  scanner.py  security.py  self_check.py  session_handoff.py  sites.py  strategies.py  swarm_orchestrator.py  types.py  ui_server.py  url_params.py  validator.py  verifier.py
docs/: demo_slides.md  index.html  presentation_script.md  slides.html  submission.md
eval/: demo_queries.jsonl  final_queries.jsonl  generate_notebook_and_visuals.py  generate_report.py  held_out_queries.jsonl  report.json  run_ablation.py
rl_data/: episodes.jsonl
scripts/: demo_seed.py  generate_dashboard.py  run_clean_rl_experiment.py
tests/: conftest.py  fixtures.py  generate_attack_screenshots.py  test_action_classifier.py  test_adversarial_vectors.py  test_audit_log.py  test_cross_branch_and_fallback.py  test_dom_extractor.py  test_ecommerce.py  test_eval.py  test_injection_listing.py  test_integration_pipeline.py  test_marketplace.py  test_orchestrator.py  test_prompt_injection.py  test_query_parser.py  test_rl.py  test_sites.py  test_url_params.py  test_verification_stream.py  test_verifier.py  test_visual_injection.py
trajectories_backup_20260509_152611/: run-1700000000.json  run-1700000001.json  run-1700000002.json  run-1700000003.json  run-1700000004.json  run-1700000005.json  run-1700000006.json  run-1700000007.json  run-1700000008.json  run-1700000009.json  run-1700000010.json  run-1700000011.json  run-1700000012.json  run-1700000013.json  run-1700000014.json  run-1700000015.json  run-1700000016.json  run-1700000017.json  (+34 more)
(+27 files in other folders)
