[project]
name = "cua-verified-loop"
version = "0.1.0"
description = "Verified self-correcting outer loop around any CUA model. Wraps Lightcone Northstar by default."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "tzafon>=0.1.0",
    "kernel>=0.1.0",
    "anthropic>=0.40.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "rich>=13.0",
    "kernel-sdk>=6.0.0",
    "fastapi>=0.100.0",
    "matplotlib>=3.8.0",
    "pandas>=2.2.0",
    "uvicorn>=0.23.0",
    "seaborn>=0.13.0",
]

[project.optional-dependencies]
critic = [
    "torch>=2.2",
    "open-clip-torch>=2.24",
    "numpy>=1.26",
]
finetune = [
    "accelerate>=0.34.0",
    "bitsandbytes>=0.43.0; platform_system != 'Windows'",
    "datasets>=2.20.0",
    "peft>=0.12.0",
    "torch>=2.2",
    "transformers>=4.45.0",
    "trl>=0.10.0",
]

[project.scripts]
cua-loop = "cua_loop.demo:main"
cua-ui = "cua_loop.ui_server:main"
aegis-check = "cua_loop.self_check:main"
aegis-rl = "cua_loop.rl:main"
cua-export = "cua_loop.rl_schema:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
markers = ["integration: calls real LLM API (requires ANTHROPIC_API_KEY)"]

[tool.hatch.build.targets.wheel]
packages = ["cua_loop", "aegis_core"]
